# PicoDVI

software/apps/: CMakeLists.txt
software/apps/xep80/: CMakeLists.txt  gfx.c  gfx.h  main.c  sync_uart.c  sync_uart.h  tmds_encode_font_2bpp.h  uart_8n1_tx.pio  uart_9n1_rx.pio  uart_9n1_tx.pio  uart_log.c  uart_log.h  xep80.c  xep80.h
software/apps/xep80/doc/: Readme.md
software/apps/xep80/font/: font_8x8.h
